--- a/.github/workflows/google.yml
+++ b/.github/workflows/google.yml
@@ -13,8 +13,8 @@ on:
 
 env:
   PROJECT_ID: ${{ secrets.GKE_PROJECT }}
-  GKE_CLUSTER: ${{ secrets.GKE_CLUSTER }}    # Add your cluster name here.
-  GKE_ZONE: ${{ secrets.GKE_ZONE }}   # Add your cluster zone here.
+  GKE_CLUSTER: cluster-1   # Add your cluster name here.
+  GKE_ZONE: us-central1-c # Add your cluster zone here.
   DEPLOYMENT_NAME: python-app # Add your deployment name here.
   IMAGE: python-app
 
